Introduced Dashboad Screen and associated Code Changes, FIxed ReadUserProfile Screen, Removed Index Screen Code

--- a/Pages/CreateUserAccessControl.cshtml
+++ b/Pages/CreateUserAccessControl.cshtml
@@ -86,7 +86,7 @@
                                     <button type="submit" class="btn create-btn" style="width:140px;">Create</button>
                                 </div>
                                 <div class="col-4 ms-3">
-                                    <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                                    <a asp-page="/Dashboard" class="btn btn-secondary" style="width:180px;"> Back to Dashboard</a>
                                 </div>
                                 <div class="col-3"></div>
                             </div>
