--- a/Pages/UpdateTransactionFees.cshtml
+++ b/Pages/UpdateTransactionFees.cshtml
@@ -61,7 +61,7 @@
                                         <button type="submit" class="btn" style="width:140px; background-color:#17a2b8;color:white">Update</button>
                                     </div>
                                     <div class="col-4 ms-3">
-                                        <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                                        <a asp-page="/Dashboard" class="btn btn-secondary" style="width:180px;"> Back to Dashboard</a>
                                     </div>
                                     <div class="col-3"></div>
                                 </div>
@@ -125,7 +125,7 @@
                                         <button type="submit" class="btn" style="width:140px; background-color:#17a2b8;color:white">Add</button>
                                     </div>
                                     <div class="col-4 ms-3">
-                                        <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                                        <a asp-page="/Dashboard" class="btn btn-secondary" style="width:180px;"> Back to Dashboard</a>
                                     </div>
                                     <div class="col-3"></div>
                                 </div>
