--- a/Pages/CreateUserProfile.cshtml
+++ b/Pages/CreateUserProfile.cshtml
@@ -179,7 +179,7 @@
                                     <button type="submit" onclick="prepareFormSubmission()" class="btn create-btn" style="width:140px;">Create</button>
                                 </div>
                                 <div class="col-4 ms-3">
-                                    <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                                    <a asp-page="/Dashboard" class="btn btn-secondary" style="width:180px;"> Back to Dashboard</a>
                                 </div>
                                 <div class="col-3"></div>
                             </div>
