--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -137,7 +137,7 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="./index" class="nav-link active">
+                                    <a href="./Dashboard" class="nav-link active">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Dashboard</p>
                                     </a>
@@ -201,10 +201,17 @@
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
                                 <li class="breadcrumb-item">
-                                    <a href="#">Home</a>
+                                    <a href="/">Home</a>
                                 </li>
                                 <li class="breadcrumb-item active">
-                                    @TempData["NavigationalPageName"]
+                                    @if (string.Compare(TempData["NavigationalPageName"] as string,"Dashboard") != 0)
+                                    {
+                                        @TempData["NavigationalPageName"]
+                                    }
+                                    else
+                                    {
+                                        @:#
+                                    }
                                 </li>
                             </ol>
                         </div>
