--- a/Pages/UpdateCategory.cshtml
+++ b/Pages/UpdateCategory.cshtml
@@ -66,7 +66,7 @@
                                     <button type="submit" class="btn create-btn" style="width:140px;">Update</button>
                                     </div>
                                     <div class="col-4 ms-3">
-                                        <a asp-page="/Index" class="btn btn-secondary shadow" style="width:180px;"> Back to Transactions</a>
+                                    <a asp-page="/Dashboard" class="btn btn-secondary shadow" style="width:180px;"> Back to Dashboard</a>
                                     </div>
                                     <div class="col-3"></div>
                                 </div>
