Changes over SP, FIxed EditSettings , DeleteENtityRecord Dashboard and CreateUserProfile Screens, and its calling API, js

--- a/Pages/Dashboard.cshtml
+++ b/Pages/Dashboard.cshtml
@@ -7,29 +7,21 @@
 
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
     <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:60%;">
-        <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
-            <div class="row pb-1 pt-2">
-                <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Dashboard</div>
-                <div>
-                    <hr />
+        <div class="card">
+            <div class="card-header">
+                <div class="card-title fw-bold" style="color:#17a2b8;">Dashboard Details</div>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                        <i class="fas fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-tool" data-card-widget="remove">
+                        <i class="fas fa-times"></i>
+                    </button>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-header">
-                    <div class="card-title fw-bold">Dashboard Details</div>
-                    <div class="card-tools">
-                        <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                            <i class="fas fa-minus"></i>
-                        </button>
-                        <button type="button" class="btn btn-tool" data-card-widget="remove">
-                            <i class="fas fa-times"></i>
-                        </button>
-                    </div>
-                </div>
-                <div class="card-body d-flex align-items-center justify-content-center" style="height:200px; position: relative;">
-                    <div id="draggableText" class="text-center fw-bolder draggable" style="font-size:1.5rem;color:#333;text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">
-                        SPIDER | Enterprise Monitoring Tools
-                    </div>
+            <div class="card-body d-flex align-items-center justify-content-center" style="height:400px; position: relative;">
+                <div id="draggableText" class="text-center fw-bolder draggable" style="font-size:1.5rem;color:#333;text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">
+                    SPIDER | Enterprise Monitoring Tools
                 </div>
             </div>
         </div>
