--- a/Pages/DeleteEntityRecord.cshtml
+++ b/Pages/DeleteEntityRecord.cshtml
@@ -87,6 +87,7 @@
                         <div id="detailsForm">
                             <!-- Dynamic form content will be inserted here -->
                         </div>
+                        <div style="display: flex; justify-content:space-around;height:auto;">
                         <div class="row">
                             <div class="col-2"></div>
                             <div class="col-3 me-4">
@@ -96,6 +97,7 @@
                                 <a asp-page="/Dashboard" class="btn btn-secondary" style="width:180px;"> Back to Dashboard</a>
                             </div>
                             <div class="col-3"></div>
+                        </div>
                         </div>
                     </div>
                 </div>
