--- a/Pages/CreateUserProfile.cshtml
+++ b/Pages/CreateUserProfile.cshtml
@@ -112,7 +112,7 @@
                                 <label asp-for="ProfileUsersData.Password" class="form-label"></label>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text"><i class="fas fa-eye-slash"></i></span>
+                                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
                                     </div>
                                     <input type="password" asp-for="ProfileUsersData.Password" placeholder="Password" class="form-control" />
                                 </div>
