--- a/Pages/Dashboard.cshtml
+++ b/Pages/Dashboard.cshtml
@@ -9,7 +9,7 @@
     <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:60%;">
         <div class="card">
             <div class="card-header">
-                <div class="card-title fw-bold" style="color:#17a2b8;">Dashboard Details</div>
+                <div class="card-title fw-bold" style="font-size:1.2rem">Dashboard Details</div>
                 <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse">
                         <i class="fas fa-minus"></i>
@@ -19,7 +19,7 @@
                     </button>
                 </div>
             </div>
-            <div class="card-body d-flex align-items-center justify-content-center" style="height:400px; position: relative;">
+            <div class="card-body align-items-center justify-content-center" style="height:400px; position: relative; display:flex;">
                 <div id="draggableText" class="text-center fw-bolder draggable" style="font-size:1.5rem;color:#333;text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">
                     SPIDER | Enterprise Monitoring Tools
                 </div>
