--- a/Pages/EditSettings.cshtml
+++ b/Pages/EditSettings.cshtml
@@ -95,19 +95,36 @@
                             <span asp-validation-for="SettingsData.SettingEmail" class="text-danger fw-bold"></span>
                         </div>
 
-                        <!-- Username and Password on one line -->
+                        <!-- Change Password Section -->
                         <div class="mb-3">
-                            <label asp-for="SettingsData.Password" class="form-label"></label>
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                            <label class="form-label" style="font-size:1.2rem;">Change Password</label>
+                            <div class="mb-3">
+                                <label asp-for="SettingsData.Password" class="form-label"></label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                                    </div>
+                                    <input type="password" asp-for="SettingsData.Password" placeholder="New Password" class="form-control" />
+                                    <button class="btn btn-secondary" type="button" id="togglePasswordVisibility">
+                                        <i class="fas fa-eye-slash"></i>
+                                    </button>
                                 </div>
-                                <input type="password" asp-for="SettingsData.Password" placeholder="Password" class="form-control" />
-                                <button class="btn btn-secondary" type="button" id="togglePasswordVisibility">
-                                    <i class="fas fa-eye-slash"></i>
-                                </button>
+                                <span asp-validation-for="SettingsData.Password" class="text-danger fw-bold"></span>
                             </div>
-                            <span asp-validation-for="SettingsData.Password" class="text-danger fw-bold"></span>
+
+                            <div class="mb-3">
+                                <label asp-for="SettingsData.ReTypePassword" class="form-label"></label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                                    </div>
+                                    <input type="password" asp-for="SettingsData.ReTypePassword" placeholder="Retype New Password" class="form-control" />
+                                    <button class="btn btn-secondary" type="button" id="toggleReTypePasswordVisibility">
+                                        <i class="fas fa-eye-slash"></i>
+                                    </button>
+                                </div>
+                                <span asp-validation-for="SettingsData.ReTypePassword" class="text-danger fw-bold"></span>
+                            </div>
                         </div>
 
                         <div style="display: flex; justify-content:space-around;height:auto;">
