--- a/Pages/EditSettings.cshtml
+++ b/Pages/EditSettings.cshtml
@@ -99,12 +99,12 @@
                         <div class="mb-3">
                             <label class="form-label" style="font-size:1.2rem;">Change Password</label>
                             <div class="mb-3">
-                                <label asp-for="SettingsData.Password" class="form-label"></label>
+                                <label name="SettingsData.Password" class="form-label"></label>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-lock"></i></span>
                                     </div>
-                                    <input type="password" asp-for="SettingsData.Password" placeholder="New Password" class="form-control" />
+                                    <input type="password" name="SettingsData.Password" placeholder="New Password" class="form-control" />
                                     <button class="btn btn-secondary" type="button" id="togglePasswordVisibility">
                                         <i class="fas fa-eye-slash"></i>
                                     </button>
@@ -113,12 +113,12 @@
                             </div>
 
                             <div class="mb-3">
-                                <label asp-for="SettingsData.ReTypePassword" class="form-label"></label>
+                                <label name="SettingsData.ReTypePassword" class="form-label"></label>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-lock"></i></span>
                                     </div>
-                                    <input type="password" asp-for="SettingsData.ReTypePassword" placeholder="Retype New Password" class="form-control" />
+                                    <input type="password" name="SettingsData.ReTypePassword" placeholder="Retype New Password" class="form-control" />
                                     <button class="btn btn-secondary" type="button" id="toggleReTypePasswordVisibility">
                                         <i class="fas fa-eye-slash"></i>
                                     </button>
