--- a/Pages/UpdateUserProfile.cshtml
+++ b/Pages/UpdateUserProfile.cshtml
@@ -27,6 +27,7 @@
                     </div>
                 </div>
                 <div class="card-body">
+                    <div asp-validation-summary="All"></div>
                     <!-- Search Section -->
                     <div class="mb-3 form-group">
                         <label for="searchCriteria" class="form-label">
@@ -127,9 +128,9 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-id-badge"></i></span>
                                     </div>
-                                    <input type="text" asp-for="ProfileUsersData.IdNumber" placeholder="National/Iqama Number" class="form-control" />
+                                    <input type="text" asp-for="ProfileUsersData.IdNumber" placeholder="National/Iqama Number" class="form-control" data-field="IdNumber" />
                                 </div>
-                                <span asp-validation-for="ProfileUsersData.IdNumber" class="text-danger fw-bold"></span>
+                                <span asp-validation-for="ProfileUsersData.IdNumber" class="text-danger fw-bold" id="IdNumber-validation"></span>
                             </div>
                         </div>
 
@@ -153,9 +154,9 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                                     </div>
-                                    <input type="email" asp-for="ProfileUsersData.Email" placeholder="Email Address" class="form-control" />
+                                    <input type="email" asp-for="ProfileUsersData.Email" placeholder="Email Address" class="form-control" data-field="Email" />
                                 </div>
-                                <span asp-validation-for="ProfileUsersData.Email" class="text-danger fw-bold"></span>
+                                <span asp-validation-for="ProfileUsersData.Email" class="text-danger fw-bold" id="Email-validation"></span>
                             </div>
                             <div style="flex: 1;">
                                 <label asp-for="ProfileUsersData.MobileNo" class="form-label"></label>
@@ -163,9 +164,9 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-phone"></i></span>
                                     </div>
-                                    <input type="tel" asp-for="ProfileUsersData.MobileNo" placeholder="Mobile Number" class="form-control" />
+                                    <input type="tel" asp-for="ProfileUsersData.MobileNo" placeholder="Mobile Number" class="form-control" data-field="MobileNo" />
                                 </div>
-                                <span asp-validation-for="ProfileUsersData.MobileNo" class="text-danger fw-bold"></span>
+                                <span asp-validation-for="ProfileUsersData.MobileNo" class="text-danger fw-bold" id="MobileNo-validation"></span>
                             </div>
                         </div>
 
@@ -176,9 +177,9 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-user-cog"></i></span>
                                 </div>
-                                <input type="text" asp-for="ProfileUsersData.Username" placeholder="Username" class="form-control" />
+                                <input type="text" asp-for="ProfileUsersData.Username" placeholder="Username" class="form-control" data-field="Username" />
                             </div>
-                            <span asp-validation-for="ProfileUsersData.Username" class="text-danger fw-bold"></span>
+                            <span asp-validation-for="ProfileUsersData.Username" class="text-danger fw-bold" id="Username-validation"></span>
                         </div>
 
                         <!-- Dropdown to Select Profile Name -->
